ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -79,4 +79,6 @@
     li
       float: none
       padding: 0
-      margin-top: 20px 
+
+  .home
+    margin-top: 20px
